# advent-of-code-2022

./: advent_of_code.opam  dune-project
lib/: common.ml  day1.ml  day2.ml  day3.ml  day4.ml  day5.ml  day6.ml  day7.ml  dune
test/: advent_of_code.ml  dune
